# tidalHack

./: .dockerignore  .env.example  .gitignore  AGENTIC_VS_STANDARD.md  AUTOGEN_MIGRATION_PROMPT.md  COMPLETION_SUMMARY.md  DASHBOARD_QUICKSTART.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_COMPLETION.md  FINAL_MVP_STATUS.md  IMPLEMENTATION_GUIDE.md  LICENSE  MVP_CHECKPOINT_FINAL.md  MVP_COMPLETION_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_STATUS_FINAL.md  QUICK_START.md  README.md  RUN_DASHBOARD.md  SESSION_SUMMARY.md  TASKS_6.3_AND_17_COMPLETE.md  TESTING_GUIDE.md  WEBSITE_SETUP.md  debug_demo.py  docker-compose.yml  output_test2.txt  pyproject.toml  pytest.ini  requirements.txt  run_api.py  start_dashboard.bat  start_dashboard.sh  test_csv_loading.py  test_demo_simple.py  test_import.py  test_minimal.py  test_new_features.py  test_quality_reporter_simple.py  test_simple_demo.py
.claude/: settings.local.json
.kiro/specs/ili-data-alignment-system/: design.md  requirements.md  tasks.md
data/: .gitkeep
data/uploads/: 1_ILIDataV2_2022.csv  2_ILIDataV2_2015.csv  3_ILIDataV2_2007.csv
docs/: ADVANCED_FEATURES.md  AGENTIC_SYSTEM.md  TASK_4.3_QUALITY_REPORTING.md  TASK_6.2_DISTANCE_CORRECTION.md
examples/: agentic_explanation_example.py  complete_system_demo_with_agents.py  complete_system_demo_working.py  compliance_reporting_example.py  distance_correction_example.py  full_pipeline_analysis.py  matching_example.py  ml_prediction_example.py  nl_query_example.py  quality_reporting_example.py  three_way_analysis.py
models/: .gitkeep
output/complete_demo/: growth_analysis.csv
output/complete_demo_with_agents/: ai_explanations.csv  growth_analysis.csv  matches.csv
output/full_analysis/: growth_metrics_2015_2022.csv  matches_2015_2022.csv  risk_scores_2022.csv
output/quality_reports/: RUN_2007_quality_report.json  RUN_2007_quality_report.txt  RUN_2015_quality_report.json  RUN_2015_quality_report.txt  RUN_2022_quality_report.json  RUN_2022_quality_report.txt
output/three_way_analysis/: business_summary.csv  risk_scores_2022.csv  three_way_chains.csv
output/three_way_with_agents/: ai_explanations.csv  executive_summary.json  three_way_chains.csv
src/: __init__.py
src/agents/: __init__.py  chain_storyteller.py  match_explainer.py
src/alignment/: __init__.py  correction.py  dtw_aligner.py  validator.py
src/analysis/: __init__.py  cluster_detector.py  three_way_analyzer.py
src/api/: __init__.py  main.py
src/api/routers/: __init__.py  analysis.py  anomalies.py  chains.py  clusters.py  explain.py  growth.py  matching.py  reports.py  webhooks.py
src/compliance/: __init__.py  inspection_interval_calculator.py  regulatory_risk_scorer.py  risk_scorer.py
src/dashboard/: __init__.py  app.py
src/data_models/: __init__.py  models.py
src/database/: __init__.py  connection.py  crud.py  schema.py
src/growth/: __init__.py  analyzer.py  risk_scorer.py
src/ingestion/: __init__.py  loader.py  quality_reporter.py  validator.py
src/matching/: __init__.py  matcher.py  similarity.py
src/prediction/: __init__.py  feature_engineer.py  growth_predictor.py
src/query/: __init__.py  nl_query_parser.py  query_executor.py
src/reporting/: __init__.py  compliance_report_generator.py
src/utils/: __init__.py  error_handler.py
test_output/: quality_report.json  quality_report.txt
tests/: __init__.py  conftest.py
tests/integration/: test_dtw_correction_integration.py
tests/unit/: test_data_models.py  test_distance_correction.py  test_dtw_aligner.py  test_growth_analyzer.py  test_matcher.py  test_quality_reporter.py  test_validator.py
(+6 files in other folders)
